Fixed: Protocol should not be necessary for rule generation #5 [Bug] Missing space after `-o` parameter #6 Implemented: [Feature request] Add link to the GitHub repo #7

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,38 @@
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$iptables_rule_generator-primary: mat.define-palette(mat.$indigo-palette);
+$iptables_rule_generator-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$iptables_rule_generator-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$iptables_rule_generator-theme: mat.define-light-theme((
+  color: (
+    primary: $iptables_rule_generator-primary,
+    accent: $iptables_rule_generator-accent,
+    warn: $iptables_rule_generator-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($iptables_rule_generator-theme);
+
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@500&display=swap');
 $bg-color: rgb(21, 21, 21);
@@ -18,3 +53,6 @@ body	{
     height: auto;
   }
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
